@@ -1,3 +1,8 @@
+Sat Oct 09 12:23:07 2010  Jiri (George) Lebl <jirka@5z.com>
+
+	* Makefile.am: apply patch from Dominique Leuenberger
+	  (dominique at leuenberger dot net) to fix build on Make 3.82
+
 Thu Oct 07 12:38:44 2010  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/lexer.l: note that [^?] is may include newlines,
